--- a/sonarqube-scanner-maven/maven-basic/pom.xml
+++ b/sonarqube-scanner-maven/maven-basic/pom.xml
@@ -16,7 +16,8 @@
                     <sonar.host.url>
                     http://54.166.46.136:9000
                 </sonar.host.url>
-	 <sonar.login>squ_c775d85c16c8c7ab6ee612503b3558752e4e1a8f</sonar.login> 
+	 <sonar.user>admin</sonar.user>
+	 <sonar.password>Admin</sonar.password>
           
   </properties>
 
